<?xml version="1.0" encoding="utf-8"?>
<resources>


    <string name="app_name">Sync Up</string>
    <string name="loginButton">LOGIN</string>
    <string name="signupButton">SIGN UP</string>
    <string name="password">password</string>
    <string name="username">username</string>
    <string name="discover">DISCOVER</string>
    <string name="socialize">SOCIALIZE</string>
    <string name="to_do">TO DO</string>
    <string name="activities">ACTIVITIES</string>
    <string name="account_settings">ACCOUNT SETTINGS</string>
    <string name="add_friends">ADD FRIENDS</string>
    <string name="my_friends">MY FRIENDS</string>
    <string name="create">CREATE</string>
    <string name="calendar">CALENDAR</string>
    <string name="create_activity">CREATE ACTIVITY</string>
    <string name="fill_out_fields_prompt">Please fill out the following fields</string>
    <string name="activity_name">*activity name</string>
    <string name="location">*location</string>
    <string name="date">*date</string>
    <string name="start_time">start time</string>
    <string name="end_time">end time</string>
    <string name="photos">PHOTOS</string>
    <string name="description">input a description of the activity</string>
    <string name="invite_friends">INVITE FRIENDS</string>
    <string name="select_list">Select one of the following lists</string>
    <string name="starred_friends">STARRED FRIENDS</string>
    <string name="public">PUBLIC</string>
    <string name="select_friends">Or, select the friends you want to invite</string>
</resources>
