<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/firebrick_red"
        >






    <EditText
            android:id="@+id/userNameInput"
            android:layout_width="200dp"
            android:layout_height="35dp"
            android:background="@drawable/edit_text_background"
            android:layout_marginTop="30dp"
            android:layout_centerHorizontal="true"
            android:hint="@string/username"
            android:textColorHint="@color/text_gray"
            android:textColor="@color/text_gray"
            android:paddingLeft="5dp"




            />

    <EditText
            android:id="@+id/passwordInput"
            android:layout_width="200dp"
            android:layout_height="35dp"
            android:background="@drawable/edit_text_background"
            android:layout_below="@id/userNameInput"
            android:layout_marginTop="10dp"
            android:layout_centerHorizontal="true"
            android:hint="@string/password"
            android:textColorHint="@color/text_gray"
            android:paddingLeft="5dp"
            android:inputType="textPassword"
            android:textColor="@color/text_gray"


            />

    <Button
            android:id="@+id/login_button"
            android:layout_height="50dp"
            android:layout_width="100dp"
            android:background="@drawable/image_button_welcome_screen"
            android:layout_below="@id/passwordInput"
            android:layout_marginTop="20dp"
            android:layout_centerHorizontal="true"
            android:text="@string/loginButton"
            android:textColor="@color/white"
            android:textSize="15dp"


            />

    <Button
            android:id="@+id/signup_button"
            android:layout_height="50dp"
            android:layout_width="100dp"
            android:background="@drawable/image_button_welcome_screen"
            android:text="@string/signupButton"
            android:textSize="15dp"
            android:textColor="@color/white"
            android:layout_below="@id/login_button"
            android:layout_marginTop="8dp"
            android:layout_centerHorizontal="true"


            />
</RelativeLayout>

