<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/firebrick_red"

        >

    <TextView
            android:id="@+id/activities_title"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:background="@drawable/white_title_background"
            android:layout_marginBottom="15dp"
            android:text="@string/activities"
            android:textColor="@color/firebrick_red"
            android:textSize="40dp"
            android:gravity="center_horizontal"


            />

    <ImageButton
            android:id="@+id/create_button"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_below="@id/activities_title"
            android:layout_centerHorizontal="true"
            android:background="@drawable/activity_page_create_button"
            android:layout_marginBottom="5dp"


            />

    <TextView
            android:id="@+id/create_label"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/create"
            android:textColor="@color/white"
            android:layout_below="@id/create_button"
            android:layout_centerHorizontal="true"
            android:textSize="20dp"
            android:layout_marginBottom="10dp"

            />

    <ImageButton
            android:id="@+id/calendar_button"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_below="@id/create_label"
            android:layout_centerHorizontal="true"
            android:background="@drawable/activity_page_calendar_button"
            android:layout_marginBottom="5dp"
            />

    <TextView
            android:id="@+id/calendar_label"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/calendar"
            android:textColor="@color/white"
            android:layout_below="@id/calendar_button"
            android:layout_centerHorizontal="true"
            android:textSize="20dp"

            />








</RelativeLayout>